--- a/dashboard.html
+++ b/dashboard.html
@@ -1,12 +1,7 @@
-
 <!DOCTYPE html>
-<html lang="ko">
-<head><meta charset="UTF-8"><title>대시보드</title></head>
-<body>
-  <h2>GPT 대시보드</h2>
-  <textarea id="prompt" placeholder="GPT에게 질문하세요" rows="5" cols="60"></textarea><br>
-  <button onclick="askGPT()">GPT 실행</button>
-  <div id="response" style="margin-top: 20px;"></div>
-  <script src="js/gpt.js"></script>
-</body>
-</html>
+<html lang="ko"><head><meta charset="UTF-8"><title>📊 관리자 대시보드</title>
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head><body class="bg-slate-900 text-white text-center py-20">
+<h1 class="text-4xl font-bold mb-6">📊 관리자 대시보드</h1>
+<p class="text-gray-400 text-lg">이 페이지는 실제로 작동하는 AgriNexus 기능입니다.</p>
+</body></html>
