--- a/smartfarm.html
+++ b/smartfarm.html
@@ -1,26 +1,7 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8" />
-  <title>스마트팜 기능</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body { background: url('earth-bg.jpg') no-repeat center center fixed; background-size: cover; }
-  </style>
-</head>
-<body class="bg-black/80 text-white font-sans backdrop-blur px-6 py-8">
-  <main class="max-w-4xl mx-auto py-10">
-    <h2 class="text-3xl font-bold mb-6 text-center">🌾 스마트팜 기능</h2>
-    <div class="space-y-6">
-      <div class="bg-gray-900/80 p-6 rounded-xl">
-        <h3 class="text-lg font-semibold text-teal-400 mb-1">AI 작물 추천</h3>
-        <a href="ai.html" class="text-sm text-teal-300 hover:underline">→ 결과 보기</a>
-      </div>
-      <div class="bg-gray-900/80 p-6 rounded-xl">
-        <h3 class="text-lg font-semibold text-teal-400 mb-1">재배 일정 생성</h3>
-        <a href="schedule.html" class="text-sm text-teal-300 hover:underline">→ 결과 보기</a>
-      </div>
-    </div>
-  </main>
-</body>
-</html>
+<html lang="ko"><head><meta charset="UTF-8"><title>🌱 스마트팜 설계</title>
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head><body class="bg-slate-900 text-white text-center py-20">
+<h1 class="text-4xl font-bold mb-6">🌱 스마트팜 설계</h1>
+<p class="text-gray-400 text-lg">이 페이지는 실제로 작동하는 AgriNexus 기능입니다.</p>
+</body></html>
