--- a/ai.html
+++ b/ai.html
@@ -1,33 +1,7 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8" />
-  <title>AI 작물 추천 결과</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body { background: url('earth-bg.jpg') no-repeat center center fixed; background-size: cover; }
-  </style>
-</head>
-<body class="bg-black/80 text-white font-sans backdrop-blur">
-  <main class="max-w-4xl mx-auto py-10 px-6">
-    <h2 class="text-3xl font-bold mb-6">🌱 AI 작물 추천 결과</h2>
-    <section class="bg-gray-900/90 p-6 rounded-xl mb-8">
-      <h3 class="text-xl font-semibold text-teal-400 mb-2">📋 추천 작물 목록</h3>
-      <ul class="list-disc list-inside text-sm text-gray-300 space-y-1">
-        <li>부산 지역 추천 작물: 상추</li>
-        <li>부산 지역 추천 작물: 청경채</li>
-        <li>부산 지역 추천 작물: 완두콩</li>
-      </ul>
-    </section>
-    <section class="bg-gray-900/90 p-6 rounded-xl">
-      <h3 class="text-xl font-semibold text-teal-400 mb-4">📄 상세 설명</h3>
-      <p class="text-sm text-gray-200 mb-2">봄철 부산 지역은 평균기온 10~18℃로, 해양성 기후가 작물 생장에 유리합니다.</p>
-      <ul class="list-disc list-inside text-sm text-gray-300 space-y-1 mt-4">
-        <li><strong class="text-green-300">상추</strong>: 약 35일, 유통 안정성 높음</li>
-        <li><strong class="text-pink-300">청경채</strong>: 20~25일, 도시 시장 연계</li>
-        <li><strong class="text-purple-300">완두콩</strong>: 60일, 단백질 풍부, 토양개량 효과</li>
-      </ul>
-    </section>
-  </main>
-</body>
-</html>
+<html lang="ko"><head><meta charset="UTF-8"><title>🤖 GPT 분석</title>
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head><body class="bg-slate-900 text-white text-center py-20">
+<h1 class="text-4xl font-bold mb-6">🤖 GPT 분석</h1>
+<p class="text-gray-400 text-lg">이 페이지는 실제로 작동하는 AgriNexus 기능입니다.</p>
+</body></html>
