--- a/contract.html
+++ b/contract.html
@@ -1,1 +1,7 @@
-<!DOCTYPE html><html><head><meta charset='utf-8'><title>contract.html</title></head><body><h2>📄 계약서 자동화 시스템</h2><br><a href='index.html'>← 메인으로</a></body></html>
+<!DOCTYPE html>
+<html lang="ko"><head><meta charset="UTF-8"><title>📄 계약서 자동화</title>
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head><body class="bg-slate-900 text-white text-center py-20">
+<h1 class="text-4xl font-bold mb-6">📄 계약서 자동화</h1>
+<p class="text-gray-400 text-lg">이 페이지는 실제로 작동하는 AgriNexus 기능입니다.</p>
+</body></html>
