--- a/index.html
+++ b/index.html
@@ -1,39 +1,10 @@
 <!DOCTYPE html>
-<html lang="ko"><head><meta charset="UTF-8">
-<title>AgriNexus World</title><meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"></head>
-<body class="bg-white text-gray-900">
-<header class="bg-slate-800 text-white py-6">
-  <div class="max-w-6xl mx-auto px-6 flex justify-between items-center">
-    <h1 class="text-2xl font-bold">🌍 AgriNexus World</h1>
-    <span class="text-sm">Powered by Founder & Vision Architect</span>
-  </div>
+<html lang="ko"><head><meta charset="UTF-8"><title>AgriNexus World</title>
+<link rel="stylesheet" href="css/style.css"></head>
+<body>
+<header><h1>🌍 AgriNexus World</h1>
+<nav><a href="pages/features.html">기능</a><a href="pages/pricing.html">요금제</a><a href="pages/contact.html">문의</a><a href="pages/login.html">로그인</a></nav>
 </header>
-<main class="max-w-6xl mx-auto px-6 py-12">
-  <h2 class="text-3xl font-bold mb-6">기능 대시보드</h2>
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-    <a href="functions/smartfarm.html" class="border rounded-lg p-6 hover:bg-emerald-100">🌱 스마트팜 설계</a>
-    <a href="functions/contract.html" class="border rounded-lg p-6 hover:bg-emerald-100">📄 계약서 자동화</a>
-    <a href="functions/logistics.html" class="border rounded-lg p-6 hover:bg-emerald-100">🚚 물류 분석</a>
-    <a href="functions/report.html" class="border rounded-lg p-6 hover:bg-emerald-100">📈 수익 보고서</a>
-    <a href="functions/ai.html" class="border rounded-lg p-6 hover:bg-emerald-100">🤖 GPT 분석</a>
-    <a href="functions/dashboard.html" class="border rounded-lg p-6 hover:bg-emerald-100">📊 관리자</a>
-    <a href="functions/login.html" class="border rounded-lg p-6 hover:bg-emerald-100">🔐 로그인</a>
-  </div>
-
-<section class="mb-12">
-  <h2 class="text-2xl font-bold mb-6 text-emerald-500 border-b border-gray-600">🌱 스마트팜 시스템</h2>
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-    <a href="functions/smartfarm-overview.html" class="border rounded-lg p-6 hover:bg-emerald-100">🌱 스마트팜 개요</a>
-    <a href="functions/smartfarm-design.html" class="border rounded-lg p-6 hover:bg-emerald-100">🛠️ 설계 도구</a>
-    <a href="functions/smartfarm-simulation.html" class="border rounded-lg p-6 hover:bg-emerald-100">📊 재배 시뮬레이션</a>
-    <a href="functions/smartfarm-control.html" class="border rounded-lg p-6 hover:bg-emerald-100">🎛️ 센서 제어</a>
-    <a href="functions/smartfarm-growth.html" class="border rounded-lg p-6 hover:bg-emerald-100">🌾 성장 추적</a>
-    <a href="functions/smartfarm-alerts.html" class="border rounded-lg p-6 hover:bg-emerald-100">🚨 경고 시스템</a>
-    <a href="functions/smartfarm-weather.html" class="border rounded-lg p-6 hover:bg-emerald-100">🌤️ 기후 분석</a>
-    <a href="functions/smartfarm-planexport.html" class="border rounded-lg p-6 hover:bg-emerald-100">🧾 PDF 추출</a>
-  </div>
-</section>
-
-</main>
+<main><h2>스마트팜 · 계약 · 분석 플랫폼</h2><p>세계 최고 수준의 자동화 시스템을 경험하세요.</p></main>
+<footer><p>© 2024 AgriNexus</p></footer>
 </body></html>
